# Splatoon3GearPlanner_v2

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.svelte  app.css  main.ts
src/assets/: abilityParams.ts  gearInfoParams.ts  gear_seed_database_2023-12-15_21-37-10.json  gear_seed_database_2026-02-27_18-56-43.json  translationParams.ts
src/lib/: DisplayAllGear.svelte  DisplayDesiredAbilities.svelte  DisplaySingleGear.svelte  GearApp.svelte  GearSortAndFilter.svelte  InputDesiredAbilities.svelte  SingleGearResultTable.svelte
src/new_lib/: DisplayAllGear.svelte  GearApp.svelte
src/old_splatoon_data/: splatoon3_data.ts  splatoon3_data_2.ts
src/svelte_virtual_table/: MyVirtualTable.svelte
wasm-splatoon-gear-checker/: Cargo.toml  LICENSE_MIT
wasm-splatoon-gear-checker/src/: js_wrappers.rs  lib.rs  main.rs  old_main.rs
wasm-splatoon-gear-checker/src/new_rewrite/: js_wrappers.rs  leanny_params.rs  leanny_utils.rs  lib.rs  main.rs  mod.rs
wasm-splatoon-gear-checker/src/new_rewrite/custom_objects/: ability_types.rs  brand_types.rs  collection_types.rs  gear_types.rs  mod.rs  single_gear_result.rs  typescript_ability_types.rs  unused.rs
wasm-splatoon-gear-checker/src/new_rewrite/purify_multiple_gear/: gear_category.rs  gear_purifier.rs  gear_search_repr.rs  gear_simplifier.rs  mod.rs  multi_gear_result.rs
wasm-splatoon-gear-checker/src/old/: all_gear_output_table.rs  custom_objects.rs  leanny_params.rs  leanny_utils.rs  mod.rs  new_data_modeling.rs  process_single_gear.rs  purify_multiple_gear.rs
(+94 files in other folders)
