[package]
name = "wasm-splatoon-gear-checker"
version = "0.1.0"
authors = ["Nathan <sonicgenfan@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.

#splatoon-rust-svelte
console_error_panic_hook = { version = "0.1.7", optional = true }
once_cell = "1.18.0"
wasm-bindgen-test = "0.3.34"
serde = "1.0.188"
serde-wasm-bindgen = "0.6.0"
tsify = { version="0.4.5" , features = ["js"]}


#untitled-4
num_enum = "0.7.0"
lazy_static = "1.4.0"
enum-iterator = "1.4.1"
variter = "0.3.0"
strum_macros = "0.25.3"
strum = "0.25.0"
enum_vec = { version = "0.3.1", features = ["smallvec"] }
enum_like = "0.2.1"
enum_like_derive = "0.1.0"
enumset = { version="1.1.3",features=["serde"] }
arrayvec = { version="0.7.4",features=["serde"] }
ts-rs = "7.0.0"
serde_repr = "0.1.17"
serde_with = "3.4.0"
smallvec = { version="1.11.2",features = ["serde"] }
itertools = "0.12.0"
js-sys = "0.3.64"
derivative = "2.2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
